creusot/tests/should_fail/prusti/deny_zombies/var.stderr
error: T@'curr cannot be moved to 'old since it isn't copy
       otherwise it would become a zombie
 --> var.rs:5:20
  |
5 | #[ensures(old(x == result))]
  |                    ^^^^^^
  |
note: the lint level is defined here
 --> var.rs:1:9
  |
1 | #![deny(creusot::prusti_zombie)]
  |         ^^^^^^^^^^^^^^^^^^^^^^

error[creusot]: T@'curr cannot be moved to 'old since it isn't copy
                required by equality check
 --> var.rs:5:20
  |
5 | #[ensures(old(x == result))]
  |                    ^^^^^^

error: aborting due to 2 previous errors

